--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -88,35 +88,12 @@ input[type="checkbox"]:checked::before {
   background-color: white;
 }
 
-input[type="checkbox"][name="end"]:checked::before {
-  background-color: var(--endColor);
+input[type="checkbox"][name="isometry1"]:checked::before {
+  background-color: var(--isometry1Color);
 }
 
-input[type="checkbox"][name="isometry"]:checked::before {
-  width: 9px;
-  height: 9px;
-  background: none;
-  border-style: solid;
-  border-width: 0px 0px 9px 9px;
-  border-color: transparent transparent var(--translationAxisColor) transparent;
-  box-sizing: border-box;
-  margin-top: 3px;
-  position: absolute;
-  margin-left: 3px;
-}
-
-input[type="checkbox"][name="isometry"]:checked::after {
-  content: "";
-  width: 9px;
-  height: 9px;
-  background: none;
-  border-style: solid;
-  border-width: 9px 9px 0px 0px;
-  border-color: var(--fixedPointColor) transparent transparent transparent;
-  box-sizing: border-box;
-  margin-top: 2px;
-  position: absolute;
-  margin-left: 2px;
+input[type="checkbox"][name="isometry2"]:checked::before {
+  background-color: var(--isometry2Color);
 }
 
 hr {
