--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -27,7 +27,7 @@ body {
 }
 
 .sidebar {
-  width: 230px;
+  width: 250px;
   display: flex;
   flex-direction: column;
   gap: 1em;
@@ -42,6 +42,10 @@ body {
   flex-direction: row;
   gap: 10px;
   align-items: center;
+
+  .spacer {
+    width:113px;
+  }
 }
 
 input[type='text'], select, button {
