--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -27,7 +27,7 @@ body {
 }
 
 .sidebar {
-  width: 250px;
+  width: 330px;
   display: flex;
   flex-direction: column;
   gap: 1em;
@@ -43,8 +43,11 @@ body {
   gap: 10px;
   align-items: center;
 
-  .spacer {
-    width:113px;
+  .centering {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -182,7 +185,7 @@ hr {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 3px;
-    width: 100px;
+    width: 170px;
     height: 80px;
   
     input {
