--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -51,7 +51,9 @@ body {
   }
 }
 
-input[type='text'], select, button {
+input[type='text'],
+select,
+button {
   font: inherit;
   background-color: inherit;
   color: inherit;
@@ -62,7 +64,8 @@ input[type='text'], select, button {
   border-radius: 4px;
 }
 
-input[type='text'], select {
+input[type='text'],
+select {
   &:focus {
     outline: none;
     border-color: var(--focusBorderColor);
@@ -114,6 +117,7 @@ hr {
   display: flex;
   width: 100%;
   flex-direction: row;
+
   input[type='text'] {
     border-radius: 4px 0 0 4px;
   }
@@ -148,7 +152,8 @@ hr {
 
     .number-input-down {
       flex: 1;
-      border: 1px solid var(--borderColor);;
+      border: 1px solid var(--borderColor);
+      ;
       border-left: none;
       border-top: none;
 
@@ -175,6 +180,7 @@ hr {
     }
   }
 }
+
 .matrix-input-container {
   display: flex;
   gap: 0.5em;
@@ -187,17 +193,19 @@ hr {
     gap: 3px;
     width: 170px;
     height: 80px;
-  
+
     input {
       background: none;
       color: inherit;
-      border: 1px dashed var(--borderColor);;
+      border: 1px dashed var(--borderColor);
+      ;
       padding: 2px;
       text-align: center;
     }
-  
+
     input:focus {
-      border-color: var(--focusBorderColor);;
+      border-color: var(--focusBorderColor);
+      ;
     }
   }
 }
@@ -210,5 +218,6 @@ hr {
 }
 
 .latex {
-  color: var(--thickBorderColor);;
+  color: var(--thickBorderColor);
+  ;
 }
