--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -22,6 +22,10 @@
   border-radius: 4px;
 }
 
+:global(*:disabled) {
+  opacity: 0.7;
+}
+
 :global(input[type='text']:focus, select:focus) {
   outline: none;
   border-color: var(--focusBorderColor);
